Bug 156551 - Texttables - Writer not responding anymore
Summary: Texttables - Writer not responding anymore
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: All All
: high normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.1 target:7.5.6
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks: Layout-Loops, Writer-Loops
  Show dependency treegraph
 
Reported: 2023-07-31 13:43 UTC by Pascal Becker
Modified: 2024-10-21 18:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with section and tables (72.04 KB, application/vnd.oasis.opendocument.text)
2023-08-03 06:39 UTC, Pascal Becker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal Becker 2023-07-31 13:43:23 UTC
Description:
When I open a writer document that used to work properly, then writer is not responding anymore after some seconds. The "hourglas" cursor is shown and there is no reaction from writer anymore. The taskmanager shows approx. 15% for the LibereOffice process. If I delete all texttables that are inside of sections from the document, all is ok again.
This happens since Version 7.5.5.2. Version 7.5.4.2 isn't affected by the problem.


Steps to Reproduce:
1.Open a document with several tables inside of sections
2.
3.

Actual Results:
Writer isn't responding anymore

Expected Results:
Write shold keep responding to user inputs


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Since the document holds about 40 tables, it's hard to figure out wich cause the problem. I even deleted one by one in an older Version and tried to open it in Version 7.5.5.2, but it only worked fine when all tables have been deleted.
Also tried a complete new user profile, safe mode and other computers.
Comment 1 futurefuture 2023-08-01 11:30:25 UTC Comment hidden (spam)
Comment 2 Adam664 2023-08-02 18:36:38 UTC
Hello and thanks for reporting the bug. Can you go to Help -> About LibreOffice and copy and paste the version information to a new comment?

It would also be helpful if you could attach a sample document to test with.

Setting status to NEEDSINFO, please set back to UNCONFIRMED after you comment. 

Thanks.
Comment 3 Pascal Becker 2023-08-03 06:39:22 UTC
Created attachment 188735 [details]
Document with section and tables

Version: 7.6.0.1 (X86_64) / LibreOffice Community
Build ID: 776eaf34564cbf3f034a0ba1fd1d5c32ff9ccf1c
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded

I know it's a prerelease version. But I tried Version 7.5.5.2 before with the same result.

I added the document, but changed all the contents to "x".
Comment 4 Telesto 2023-08-03 07:22:43 UTC
(In reply to Pascal Becker from comment #3)
The document doesn't freeze for me with an older debug version
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 066b23115c2a360507e306a88da572554daefab7
CPU threads: 8; OS: Mac OS X 13.4.1; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded

However the table layout changes massively on edits (even order of rows) and endless debug warnings

warn:legacy.osl:82246:9978233:sw/source/core/layout/tabfrm.cxx:2780: debug assertion: <SwTabFrame::MakeAll()> - format of table lowers suppressed by fix i44910

I'm not surprised it might freeze. There multiple bug reports where format of table lowers suppressed by fix i44910 shows up, including freezes
Comment 5 Telesto 2023-08-03 11:01:10 UTC
Confirm (infinite?) layout loop (waited 3 minutes, CPU didn't drop) with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e26aeb882dd236adf19679d5df9b7ba5da1ed226
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

CPU drops to 0% within 10 seconds with
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 229123ccc6f90ebf66b3e659bebbd53f8a9bdd3a
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 6 Stéphane Guillou (stragu) 2023-08-03 14:55:54 UTC
Reproduced that LO is on Struggle Street at fileopen for 7.5.5.2, 7.6.0.2 and a recent master build. Choppy scroll, hangs, can't move cursor...

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eef0c5d4d45ba35acfb6d8f7551fe565ca4badaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

7.4.7.2 handles it without reaching 100% CPU, the document can directly be scrolled, cursor can be moved, so a clear performance regression to me.

Bibisected with linux-64-7.5 repo to first bad commit 7b03808fcc3488ba6b26d8123af1c07e091b0a61 which points to core commit 560b94971b656914d17c9d1befdad2dbd3f1119a which is a cherrypick of:

commit 59987d3c77ec7dbf59fbea9f47cc226f4e8903f9
author	Michael Stahl 	Thu Jun 01 12:45:20 2023 +0200
committer	Michael Stahl 	Thu Jun 01 20:15:33 2023 +0200
tdf#150606 sw: layout: leave follow SwTabFrame invalid in columns
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152485

Michael, can you please have a look?
Comment 7 Commit Notification 2023-08-08 13:12:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a9b19f78f3cdcbf5c949a85b45877e903114cc54

tdf#156551 tdf#150606 sw: layout: only invalidate SwTabFrame if it...

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2023-08-08 13:15:18 UTC
fixed on master
Comment 9 Commit Notification 2023-08-14 09:22:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1808306db7bec6cd668b5840eb8a0121ee89991f

tdf#156551 tdf#150606 sw: layout: only invalidate SwTabFrame if it...

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-08-16 09:13:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0bd916a78dc9e586d78dffdf57e6fa80b955eef6

tdf#156551 tdf#150606 sw: layout: only invalidate SwTabFrame if it...

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Stéphane Guillou (stragu) 2023-08-30 20:47:07 UTC
Michael, I tested with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 642f2d7177ea3e6c365da2c2082a50a5137cd988
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And opening the sample file is still very slow.
In 7.4, it is instantly functional. In master, it takes more than 25 seconds.

Not as bad with gen VCL plugin, but still noticeable: instant vs 10 seconds.

Pascal and Telesto, can you also test the fix please?
Comment 12 Telesto 2023-08-30 21:06:51 UTC
(In reply to Stéphane Guillou (stragu) from comment #11)
> Michael, I tested with:
> 
> Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 642f2d7177ea3e6c365da2c2082a50a5137cd988
> CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
> Locale: en-AU (en_AU.UTF-8); UI: en-US
> Calc: threaded
> 
> And opening the sample file is still very slow.
> In 7.4, it is instantly functional. In master, it takes more than 25 seconds.
> 
> Not as bad with gen VCL plugin, but still noticeable: instant vs 10 seconds.
> 
> Pascal and Telesto, can you also test the fix please?

I'm not noticing much of a slow down specifically on file opening. However, it's lagging while editing for me, as mentioned at bug 157022.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e60ef8651cfb30335471d1622e58c13eebc7d58b
CPU threads: 8; OS: Mac OS X 13.4.1; UI render: Skia/Metal; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 13 Pascal Becker 2023-09-01 14:26:59 UTC
Just tested it with Version 7.6.1.1. Looks good for me now. Libre Calc opens the document and keeps working now without a noticeable slowdown.

Version: 7.6.1.1 (X86_64) / LibreOffice Community
Build ID: c7cda394c5de06de37d8109c310df89a4d4c3a98
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 14 Stéphane Guillou (stragu) 2023-09-01 17:28:30 UTC
Thank you both for testing.
I don't see the fileopen hang anymore in a master build from today with a fresh profile, let's mark as verified.
Thanks Michael!

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 695ae365dcab7c7dd59b39411299c5c200081885
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 15 Yasir Imtiaz 2024-10-21 18:36:30 UTC Comment hidden (spam)